ghost/ghost.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  ports:
    - name: http
      protocol: TCP
      port: 2368
      targetPort: http
