ghost/ghost.route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ghost
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  host: mhu.dev
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: ghost
